[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Jeremias.gd" type="Script" id=1]
[ext_resource path="res://Art/Protagonista_quadrado_desenho/conjuntoFaca.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Pistola.gd" type="Script" id=3]
[ext_resource path="res://Art/Protagonista_quadrado_desenho/conjuntoArma.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Metralhadora.gd" type="Script" id=5]
[ext_resource path="res://Art/Protagonista_quadrado_desenho/conjuntoMetranca.png" type="Texture" id=6]
[ext_resource path="res://Art/Protagonista_quadrado_desenho/quad_IDLE.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]

custom_solver_bias = 0.0
radius = 33.7972
height = 12.2861

[node name="Jeremias" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Faca" type="Area2D" parent="." index="0"]

editor/display_folded = true
visible = false
position = Vector2( 61.6472, -13.1682 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Faca" index="0"]

position = Vector2( 16.1767, -12.2943 )
shape = SubResource( 2 )
disabled = true

[node name="Sprite" type="Sprite" parent="Faca" index="1"]

scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Pistola" type="Node2D" parent="." index="1"]

editor/display_folded = true
visible = false
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Pistola" index="0"]

position = Vector2( 50.0511, -11.9224 )
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="BulletSpawner" type="Position2D" parent="Pistola" index="1"]

position = Vector2( 76.0505, -23.3911 )

[node name="Timer" type="Timer" parent="Pistola" index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Metralhadora" type="Node2D" parent="." index="2"]

editor/display_folded = true
script = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Metralhadora" index="0"]

position = Vector2( 51.7654, -14.1872 )
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="BulletSpawner" type="Position2D" parent="Metralhadora" index="1"]

position = Vector2( 73.3345, -24.5403 )

[node name="Timer" type="Timer" parent="Metralhadora" index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="TimerRajada" type="Timer" parent="Metralhadora" index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Sprite" type="AnimatedSprite" parent="." index="3"]

scale = Vector2( 0.12, 0.12 )
frames = SubResource( 3 )
animation = "default"
_sections_unfolded = [ "Offset", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="4"]

visible = false
shape = SubResource( 4 )

[connection signal="body_entered" from="Faca" to="." method="_on_Faca_body_entered"]

[connection signal="timeout" from="Pistola/Timer" to="Pistola" method="_on_Timer_timeout"]

[connection signal="timeout" from="Metralhadora/Timer" to="Metralhadora" method="_on_Timer_timeout"]

[connection signal="timeout" from="Metralhadora/TimerRajada" to="Metralhadora" method="_on_TimerRajada_timeout"]


